Fixed layout issues

--- a/SimpleTrackerUi/src/app/components/footer/footer.css
+++ b/SimpleTrackerUi/src/app/components/footer/footer.css
@@ -8,5 +8,6 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  margin-top: 60px;
 }
 
