--- a/SimpleTrackerUi/src/styles.css
+++ b/SimpleTrackerUi/src/styles.css
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    height: 100%;
+}
+
+body {
+    font-family: system-ui, sans-serif;
+
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    background-image: 
+        linear-gradient(
+            hsl(223, 4%, 68%),
+            hsl(227, 58%, 60%)
+        );
+
+}
+
+.wrapper {
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-bottom: 2%;
+    margin-top: 2%;
+}
+
+h3 {
+    font-family: system-ui;
+    font-weight: bold;
+    text-align: center;
+}
+
+footer {
+    margin-top: auto;
+}
